--- a/create.html
+++ b/create.html
@@ -4,26 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Enter new book</title>
+    <link rel="stylesheet" href="create.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="box">
       <h3 class="new">NEW</h3>
       <form action="" method="post">
-        <input type="text" name="name" placeholder="Name of the book" /><br><br>
-        <select id="type" name="type">
+        <input
+          type="text"
+          name="name"
+          placeholder="Name of the book"
+          class="det"
+        /><br /><br />
+        <select id="type" name="type" class="deta">
           <option value="" selected disabled>Type</option>
           <option value="Book">Book</option>
           <option value="Article">Article</option>
           <option value="Academic Journal">Academic Journal</option>
-          <option value="Essay Resource">Essay Resource</option>
-        </select><br><br>
-        <select id="status" name="status">
+          <option value1="Essay Resource">Essay Resource</option>
+        </select><br /><br />
+        <select id="status" name="status" class="deta">
           <option value="" selected disabled>Status</option>
           <option value="Not Started">Not Started</option>
           <option value="In Progress">In Progress</option>
           <option value="Done">Done</option>
-        </select><br><br>
-        <select id="score" name="score">
+        </select><br /><br />
+        <select id="score" name="score" class="deta">
           <option value="" selected disabled>Score</option>
           <option value="TBD">TBD</option>
           <option value="⭐⭐⭐⭐⭐">⭐⭐⭐⭐⭐</option>
@@ -31,11 +43,22 @@
           <option value="⭐⭐⭐">⭐⭐⭐</option>
           <option value="⭐⭐">⭐⭐</option>
           <option value="⭐">⭐</option>
-        </select><br><br>
-        <input type="text" name="author" placeholder="Name of the Author" /><br><br>
-        <input type="date" name="date" placeholder="Completed Date" /><br><br>
-        <input type="submit" value="submit">
+        </select><br /><br />
+        <input
+          type="text"
+          name="author"
+          placeholder="Name of the Author"
+          class="det"
+        /><br /><br />
+        <input
+          type="date"
+          name="date"
+          placeholder="Completed Date"
+          class="det"
+        /><br /><br />
+        <input type="submit" value="submit" class="deta sub"/>
       </form>
     </div>
+    <script src="/script.js"></script>
   </body>
 </html>
