--- a/create.html
+++ b/create.html
@@ -31,8 +31,8 @@
           <option value="" selected disabled>Type</option>
           <option value="Book">Book</option>
           <option value="Article">Article</option>
-          <option value="Academic Journal">Journal</option>
-          <option value1="Essay Resource">Essay</option>
+          <option value="Journal">Journal</option>
+          <option value1="Essay">Essay</option>
         </select><br /><br />
         <select id="status" name="status" class="deta">
           <option value="" selected disabled>Status</option>
